tests/rosetta/out/Swift/arithmetic-derivative.error
run error: exit status 1
/tmp/TestMochiToSwiftarithmetic-derivative3518150100/001/main.swift:22:6: error: keyword 'repeat' cannot be used as an identifier here
 20 |     return factors
 21 | }
 22 | func repeat(_ ch: String, _ n: Int) -> String {
    |      |- error: keyword 'repeat' cannot be used as an identifier here
    |      `- note: if this name is unavoidable, use backticks to escape it
 23 |     var s = ""
 24 |     var i = 0

/tmp/TestMochiToSwiftarithmetic-derivative3518150100/001/main.swift:3:26: error: cannot assign value of type '[Any]' to type '[Int]'
  1 | // Generated by Mochi compiler v0.10.26 on 2025-07-16T09:55:01Z
  2 | func primeFactors(_ n: Int) -> [Int] {
  3 |     var factors: [Int] = [Any]()
    |                          |- error: cannot assign value of type '[Any]' to type '[Int]'
    |                          `- note: arguments to generic parameter 'Element' ('Any' and 'Int') are expected to be equal
  4 |     var x = n
  5 |     while x % 2 == 0 {

/tmp/TestMochiToSwiftarithmetic-derivative3518150100/001/main.swift:38:26: error: cannot assign value of type '[Any]' to type '[Int]'
 36 |         return 0.0
 37 |     }
 38 |     var factors: [Int] = [Any]()
    |                          |- error: cannot assign value of type '[Any]' to type '[Int]'
    |                          `- note: arguments to generic parameter 'Element' ('Any' and 'Int') are expected to be equal
 39 |     if n < 10000000000000000000.0 {
 40 |         factors = primeFactors(Int((n)))

/tmp/TestMochiToSwiftarithmetic-derivative3518150100/001/main.swift:68:23: error: cannot assign value of type '[Any]' to type '[Int]'
 66 | }
 67 | func main() {
 68 |     var vals: [Int] = [Any]()
    |                       |- error: cannot assign value of type '[Any]' to type '[Int]'
    |                       `- note: arguments to generic parameter 'Element' ('Any' and 'Int') are expected to be equal
 69 |     var n = -99
 70 |     while n < 101 {

/tmp/TestMochiToSwiftarithmetic-derivative3518150100/001/main.swift:96:31: error: cannot pass value pack expansion to non-pack parameter of type 'String'
 94 |             exp = exp + " "
 95 |         }
 96 |         var res = String(m) + repeat("0", m - 1)
    |                               `- error: cannot pass value pack expansion to non-pack parameter of type 'String'
 97 |         print("D(10^" + exp + ") / 7 = " + res)
 98 |         m = m + 1

/tmp/TestMochiToSwiftarithmetic-derivative3518150100/001/main.swift:96:31: error: value pack expansion must contain at least one pack reference
 94 |             exp = exp + " "
 95 |         }
 96 |         var res = String(m) + repeat("0", m - 1)
    |                               `- error: value pack expansion must contain at least one pack reference
 97 |         print("D(10^" + exp + ") / 7 = " + res)
 98 |         m = m + 1
